--- a/css/post.css
+++ b/css/post.css
@@ -137,7 +137,16 @@
   .post-footer {
     background-color: var(--post-footer-bg);
     border-radius: 4px;
-    box-shadow: 2px 2px 16px -2px var(--post-footer-bg);
+    border: 8px solid color-mix(
+      in hsl, 
+      var(--primary) 92%, 
+      var(--darkest)
+    );
+    box-shadow: 2px 2px 16px -2px color-mix(
+      in hsl, 
+      var(--post-footer-bg) 80%, 
+      var(--lightest)
+    );
     color: var(--post-footer-fg);
     padding: 2.5rem 2.5rem;
     margin: 0 1rem 12rem;
@@ -148,6 +157,7 @@
     
     a {
       color: var(--post-footer-fg);
+      text-decoration-color: var(--post-footer-link-underline);
     }
   }
 
